--- a/src/app/modules/account-settings/account-settings.component.html
+++ b/src/app/modules/account-settings/account-settings.component.html
@@ -16,7 +16,7 @@
                           <div class="card">
                               <div class="card-header">
                                 <div class="col-8 col-md-6 px-0">
-                                  <div class="card-title float-left">Account Settings Information</div>
+                                  <div class="card-title float-left">Visual Ad settings</div>
                                 </div>
                                 <div class="col-4 col-md-6 px-0">
                                   <div class="card-title float-right">
