--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -284,6 +284,49 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-md-6">
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-12">
+                                <h4  class="mb-2 mt-1"><i  class="fa fa-users"></i>
+                                   Default Groups
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-sm-12">
+                                <table class="table">
+                                    <thead>
+                                        <tr *ngIf="sgRefreshToken && sgAccessToken">
+                                            <th scope="col">Group Name</th>
+                                            <th scope="col">Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="ng-star-inserted" *ngIf="sgRefreshToken && sgAccessToken">
+                                            <td *ngIf="groupNames">{{groupNames}}</td>
+                                            <td *ngIf="!groupNames">N.A</td>
+                                            <td class="product-action">
+                                              <button (click) = "openGropModel()"
+                                              type="button"
+                                              class="btn btn-icon btn-outline-primary mr-1 mb-1 waves-effect waves-light"><i
+                                              class="feather icon-edit"></i>
+                                            </button>
+                                          </td>
+                                        </tr>
+                                        <tr *ngIf="!sgRefreshToken && !sgAccessToken">
+                                          <h4>This account is not verified yet</h4>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
           <!-- <div class="col-12 col-md-6">
             <div class="card">
               <div class="card-content" style="height: 200px;">
@@ -486,3 +529,33 @@
     </div>
   </div>
 </div>
+
+<!-- Default station modal-->
+<div class="modal fade" id="stationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Default Groups</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="col-12 col-sm-12">
+          <div class="form-group">
+            <label>Groups</label>
+            <select (change)="onChangeGroup($event.target.value)"  class="form-control">
+              <option value="null"> Select Default Group</option>
+              <option *ngFor="let group of groupList" value="{{group.id}}" [selected]="group.id === groupId">{{group?.displayName}}</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <button class="btn btn-primary" (click)="saveDefaultGroup()">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
+
