--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -307,7 +307,7 @@
                                     <tbody>
                                         <tr class="ng-star-inserted" *ngIf="sgRefreshToken && sgAccessToken">
                                             <td *ngIf="groupNames">{{groupNames}}</td>
-                                            <td *ngIf="!groupNames">N.A</td>
+                                            <td *ngIf="!groupNames">N/A</td>
                                             <td class="product-action">
                                               <button (click) = "openGropModel()"
                                               type="button"
@@ -546,14 +546,14 @@
             <label>Groups</label>
             <select (change)="onChangeGroup($event.target.value)"  class="form-control">
               <option value="null"> Select Default Group</option>
-              <option *ngFor="let group of groupList" value="{{group.id}}" [selected]="group.id === groupId">{{group?.displayName}}</option>
+              <option *ngFor="let group of groupList" value="{{group.id}}" [selected]="group.id == groupId">{{group?.displayName}}</option>
             </select>
           </div>
         </div>
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <button class="btn btn-primary" (click)="saveDefaultGroup()">Ok</button>
+        <button class="btn btn-primary" (click)="saveDefaultGroup()">Save</button>
       </div>
     </div>
   </div>
