--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -291,7 +291,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <h4  class="mb-2 mt-1"><i  class="fa fa-users"></i>
-                                  Group/Station
+                                  Default Group/Station
                                 </h4>
                             </div>
                         </div>
@@ -535,7 +535,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Group/Station</h5>
+        <h5 class="modal-title" id="exampleModalLabel"> Default Group/Station</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
