--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -71,36 +71,50 @@
                   </div>
                     <div class="row">
                       <div class="col-12 col-sm-12">
-                        <div class="form-group">
                         <div class="row">
-                            <div class="col-12 col-sm-4">
+                          <div class="col-12 col-sm-6">
+                            <div class="form-group">
                               <div class="controls">
                                 <label>Publisher Name *	</label>
                                 <input type="text" class="form-control" placeholder="Publisher Name" formControlName="publisherName">
                                 <div class="text-danger" *ngIf="(submitted || publisherForm.get('publisherName').touched) && publisherForm.controls['publisherName'].hasError('required')">Publisher Name Required</div>
                               </div>
                             </div>
-                          <div class="col-12 col-sm-4">
-                            <div class="controls">
-                              <label>Domain *	</label>
-                              <input type="text" class="form-control" placeholder="Domain" formControlName="domain">
-                              <div class="text-danger">
+                          </div>
+                          <div class="col-12 col-sm-6">
+                            <div class="form-group">
+                              <div class="controls">
+                                <label>Slug *	</label>
+                                <input type="text" class="form-control" appSlugTransform placeholder="Slug Name" (focusout)="focusOutFunction()" formControlName="publisherSlug">
+                                <div class="text-danger" *ngIf="(submitted || publisherForm.get('publisherSlug').touched) && publisherForm.controls['publisherSlug'].hasError('required')">Slug Required</div>
+                                <div class="text-danger" *ngIf="isSlugValid === false">Publisher already registered with the given slug</div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 col-sm-6">
+                            <div class="form-group">
+                              <div class="controls">
+                                <label>Domain *	</label>
+                                <input type="text" class="form-control" placeholder="Domain" formControlName="domain">
+                                <div class="text-danger">
                                   <div  *ngIf="(submitted || publisherForm.get('domain').touched) && publisherForm.controls['domain'].hasError('required')">Please Enter Domain</div>
                                   <div  *ngIf="f?.domain?.errors?.pattern">Please Enter Valid Domain</div>
+                                </div>
                               </div>
                             </div>
                           </div>
-                          <div class="col-12 col-sm-4">
-                            <div class="controls">
-                              <label>Home Domain *</label>
-                              <input type="text" class="form-control" placeholder="Home Domain" formControlName="homeDomain">
-                              <div class="text-danger">
-                                  <div  *ngIf="(submitted || publisherForm.get('homeDomain').touched) && publisherForm.controls['homeDomain'].hasError('required')">Please Enter Home Domain</div>
-                                  <div  *ngIf="f?.homeDomain?.errors?.pattern">Please Enter Valid Home Domain</div>
+                          <div class="col-12 col-sm-6">
+                            <div class="form-group">
+                              <div class="controls">
+                                <label>Home Domain *</label>
+                                <input type="text" class="form-control" placeholder="Home Domain" formControlName="homeDomain">
+                                <div class="text-danger">
+                                    <div  *ngIf="(submitted || publisherForm.get('homeDomain').touched) && publisherForm.controls['homeDomain'].hasError('required')">Please Enter Home Domain</div>
+                                    <div  *ngIf="f?.homeDomain?.errors?.pattern">Please Enter Valid Home Domain</div>
+                                </div>
                               </div>
                             </div>
                           </div>
-                        </div>
                         </div>
                       </div>
                       <div class="col-12 col-sm-6">
@@ -484,7 +498,7 @@
           <button *ngIf="this.submitted === true" type="submit" [disabled]="!publisherForm.valid" [ngClass]="{'disable':!publisherForm.valid }" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">
             <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> loading...
           </button>
-          <button *ngIf="this.submitted === false" [ngClass]="{'disable':!publisherForm.valid}"  [disabled]="!publisherForm.valid" (click)="onSubmit()"  type="submit" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">Save
+          <button *ngIf="this.submitted === false" [ngClass]="{'disable':!publisherForm.valid}"  [disabled]="!publisherForm.valid || !isSlugValid" (click)="onSubmit()"  type="submit" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">Save
             Changes</button>
           <button type="reset" (click)="reset()" class="btn btn-outline-warning waves-effect waves-light">Reset</button>
         </div>
