--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -94,8 +94,8 @@
               </td>
               <td>
                 <div class="d-flex">
-                  {{publisher?.domain}}
-                  <a [href]="redirectToPage(publisher?.domain)" style="color:'#7367F0'" target="_blank">
+                  atunwapodcasts.com?pubid={{publisher?.publisherSlug}}
+                  <a [href]="redirectToPage('atunwapodcasts.com?pubid=' + publisher?.publisherSlug)" style="color:'#7367F0'" target="_blank">
                     <span class="d-ex-link"><i class="fa fa-external-link" aria-hidden="true"></i></span>
                 </a>
                 </div>
@@ -172,4 +172,3 @@
     </div>
   </div>
 </div>
-
