--- a/src/app/modules/publishers/publishers.component.html
+++ b/src/app/modules/publishers/publishers.component.html
@@ -81,8 +81,8 @@
                                             <table class="ml-0 ml-sm-0 ml-lg-0">
                                                 <tr>
                                                     <td class="font-weight-bold">Domain</td>
-                                                    <td>{{publisherdata?.domain}}
-                                                        <a [href]="redirectToPage(publisherdata?.domain)" target="_blank">
+                                                    <td>{{domain}}?pubid={{publisherdata?.publisherSlug}}
+                                                        <a [href]="redirectToPage(this.domain + '?pubid=' + publisherdata?.publisherSlug)" target="_blank">
                                                             <span class="d-ex-link"><i class="fa fa-external-link" aria-hidden="true"></i></span>
                                                         </a>
                                                     </td>
